Update to ORD 1.12 and update dependencies
Signed-off-by: Simon Heimler <simon.heimler@sap.com>

--- a/static/index.html
+++ b/static/index.html
@@ -141,7 +141,7 @@
                     </li>
                     <li>
                       <a
-                        href="/open-resource-discovery/v1/documents/system-instance">/open-resource-discovery/v1/documents/system-instance</a><br />
+                        href="/open-resource-discovery/v1/documents/system-instance?local-tenant-id=T1">/open-resource-discovery/v1/documents/system-instance?local-tenant-id=T1</a><br />
                       <small>(dynamic, system-instance perspective)</small>
                     </li>
                   </ul>
