Add static perspective feature and update to ORD 1.12  (#10)
Signed-off-by: Simon Heimler <simon.heimler@sap.com>

--- a/static/index.html
+++ b/static/index.html
@@ -135,11 +135,14 @@
                   </li>
                   <ul>
                     <li>
-                      <a href="/open-resource-discovery/v1/documents/1">/open-resource-discovery/v1/documents/1</a>
+                      <a
+                        href="/open-resource-discovery/v1/documents/system-version">/open-resource-discovery/v1/documents/system-version</a><br />
+                      <small>(static, system-version perspective)</small>
                     </li>
                     <li>
-                      <a href="/open-resource-discovery/v1/documents/2">/open-resource-discovery/v1/documents/2</a>
-                      <small>(system instance aware)</small>
+                      <a
+                        href="/open-resource-discovery/v1/documents/system-instance?local-tenant-id=T1">/open-resource-discovery/v1/documents/system-instance?local-tenant-id=T1</a><br />
+                      <small>(dynamic, system-instance perspective)</small>
                     </li>
                   </ul>
                 </ul>
