Update REUSE & ORD spec links

--- a/static/index.html
+++ b/static/index.html
@@ -49,10 +49,10 @@
         ORD Reference App
       </h1>
       <p class="subtitle">
-        Example application for <a href="https://sap.github.io/open-resource-discovery/">Open Resource
+        Example application for <a href="https://open-resource-discovery.github.io/specification/">Open Resource
           Discovery</a> (ORD).
-        Source Code: <a href="https://github.com/SAP-samples/open-resource-discovery-reference-application/">
-          github.com/SAP-samples</a>.
+        Source Code: <a
+          href="https://github.com/open-resource-discovery/reference-application/">github.com/open-resource-discovery/reference-application/</a>.
       </p>
     </div>
     <br />
